[tool.poetry]
name = "park"
version = "0.1.0"
description = ""
authors = ["rainflower12 <544739517@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
pytest = "^7.4.2"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
